--- a/autointent/_datafiles/default-multilabel-config.yaml
+++ b/autointent/_datafiles/default-multilabel-config.yaml
@@ -2,20 +2,20 @@
 - node_type: retrieval
   metric: retrieval_hit_rate_intersecting
   search_space:
-    - module_type: vector_db
+    - module_name: vector_db
       k: [10]
       embedder_name:
         - deepvk/USER-bge-m3
 - node_type: scoring
   metric: scoring_roc_auc
   search_space:
-    - module_type: knn
+    - module_name: knn
       k: [3]
       weights: ["uniform", "distance", "closest"]
-    - module_type: linear
+    - module_name: linear
 - node_type: prediction
   metric: prediction_accuracy
   search_space:
-    - module_type: threshold
+    - module_name: threshold
       thresh: [0.5]
-    - module_type: adaptive
+    - module_name: adaptive
