--- a/tests/assets/configs/multiclass.yaml
+++ b/tests/assets/configs/multiclass.yaml
@@ -1,7 +1,7 @@
 - node_type: retrieval
   metric: retrieval_hit_rate
   search_space:
-    - module_type: vector_db
+    - module_name: vector_db
       k: [10]
       embedder_name:
         - sentence-transformers/all-MiniLM-L6-v2
@@ -9,17 +9,17 @@
 - node_type: scoring
   metric: scoring_roc_auc
   search_space:
-    - module_type: knn
+    - module_name: knn
       k: [5, 10]
       weights: [uniform, distance, closest]
-    - module_type: linear
-    - module_type: dnnc
+    - module_name: linear
+    - module_name: dnnc
       cross_encoder_name:
         - cross-encoder/ms-marco-MiniLM-L-6-v2
         - avsolatorio/GIST-small-Embedding-v0
       k: [1, 3]
       train_head: [false, true]
-    - module_type: rerank
+    - module_name: rerank
       k: [ 5, 10 ]
       weights: [uniform, distance, closest]
       m: [ 2, 3 ]
@@ -28,8 +28,8 @@
 - node_type: prediction
   metric: prediction_accuracy
   search_space:
-    - module_type: threshold
+    - module_name: threshold
       thresh: [0.5, [0.5, 0.5, 0.5, 0.5]]
-    - module_type: tunable
-    - module_type: argmax
-    - module_type: jinoos
+    - module_name: tunable
+    - module_name: argmax
+    - module_name: jinoos
