stage progress on `prediction` -> `decision`

--- a/autointent/_datafiles/default-multilabel-config.yaml
+++ b/autointent/_datafiles/default-multilabel-config.yaml
@@ -13,8 +13,8 @@
       k: [3]
       weights: ["uniform", "distance", "closest"]
     - module_name: linear
-- node_type: prediction
-  metric: prediction_accuracy
+- node_type: decision
+  metric: decision_accuracy
   search_space:
     - module_name: threshold
       thresh: [0.5]
