--- a/autointent/_datafiles/default-multiclass-config.yaml
+++ b/autointent/_datafiles/default-multiclass-config.yaml
@@ -19,8 +19,8 @@
         - BAAI/bge-reranker-base
         - cross-encoder/ms-marco-MiniLM-L-6-v2
       k: [1, 3, 5, 10]
-- node_type: prediction
-  metric: prediction_accuracy
+- node_type: decision
+  metric: decision_accuracy
   search_space:
     - module_name: threshold
       thresh: [0.5]
