--- a/tests/assets/configs/description.yaml
+++ b/tests/assets/configs/description.yaml
@@ -10,7 +10,7 @@
   search_space:
     - module_name: description
       temperature: [1.0, 0.5, 0.1, 0.05]
-- node_type: prediction
-  metric: prediction_accuracy
+- node_type: decision
+  metric: decision_accuracy
   search_space:
     - module_name: argmax
