stage progress on `retrieval` -> `embedding`

--- a/autointent/_datafiles/inference-config-example.yaml
+++ b/autointent/_datafiles/inference-config-example.yaml
@@ -1,5 +1,5 @@
-- node_type: retrieval
-  module_name: vector_db
+- node_type: embedding
+  module_name: retrieval
   module_config:
     k: 10
     model_name: infgrad/stella-base-en-v2
