--- a/autointent/_datafiles/default-multiclass-config.yaml
+++ b/autointent/_datafiles/default-multiclass-config.yaml
@@ -1,8 +1,8 @@
 # TODO: make up a better and more versatile config
-- node_type: retrieval
+- node_type: embedding
   metric: retrieval_hit_rate
   search_space:
-    - module_name: vector_db
+    - module_name: retrieval
       k: [10]
       embedder_name:
         - avsolatorio/GIST-small-Embedding-v0
