--- a/autointent/_datafiles/default-multilabel-config.yaml
+++ b/autointent/_datafiles/default-multilabel-config.yaml
@@ -1,8 +1,8 @@
 # TODO: make up a better and more versatile config
-- node_type: retrieval
+- node_type: embedding
   metric: retrieval_hit_rate_intersecting
   search_space:
-    - module_name: vector_db
+    - module_name: retrieval
       k: [10]
       embedder_name:
         - deepvk/USER-bge-m3
