--- a/autointent/_datafiles/default-multiclass-config.yaml
+++ b/autointent/_datafiles/default-multiclass-config.yaml
@@ -1,8 +1,8 @@
 # TODO: make up a better and more versatile config
-- node_type: retrieval
+- node_type: embedding
   metric: retrieval_hit_rate
   search_space:
-    - module_type: vector_db
+    - module_name: retrieval
       k: [10]
       embedder_name:
         - avsolatorio/GIST-small-Embedding-v0
@@ -10,18 +10,18 @@
 - node_type: scoring
   metric: scoring_roc_auc
   search_space:
-    - module_type: knn
+    - module_name: knn
       k: [1, 3, 5, 10]
       weights: ["uniform", "distance", "closest"]
-    - module_type: linear
-    - module_type: dnnc
+    - module_name: linear
+    - module_name: dnnc
       cross_encoder_name:
         - BAAI/bge-reranker-base
         - cross-encoder/ms-marco-MiniLM-L-6-v2
       k: [1, 3, 5, 10]
-- node_type: prediction
-  metric: prediction_accuracy
+- node_type: decision
+  metric: decision_accuracy
   search_space:
-    - module_type: threshold
+    - module_name: threshold
       thresh: [0.5]
-    - module_type: argmax
+    - module_name: argmax
