--- a/tests/assets/configs/description.yaml
+++ b/tests/assets/configs/description.yaml
@@ -1,16 +1,16 @@
-- node_type: retrieval
+- node_type: embedding
   metric: retrieval_hit_rate
   search_space:
-    - module_type: vector_db
+    - module_name: retrieval
       k: [10]
       embedder_name:
         - sentence-transformers/all-MiniLM-L6-v2
 - node_type: scoring
   metric: scoring_roc_auc
   search_space:
-    - module_type: description
+    - module_name: description
       temperature: [1.0, 0.5, 0.1, 0.05]
-- node_type: prediction
-  metric: prediction_accuracy
+- node_type: decision
+  metric: decision_accuracy
   search_space:
-    - module_type: argmax
+    - module_name: argmax
