--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,6 +123,7 @@ ignore = [
 "__init__.py" = ["F401", "D104"]
 "autointent/__init__.py" = ["I001"]
 "tests/*.py" = ["S", "PLR2004", "ERA", "D", "ANN", "SLF"]
+"tests/context/datahandler/test_data_handler.py" = ["PT011"]
 "autointent/modules/*" = ["ARG002", "ARG003"]  # unused argument
 "docs/*" = ["INP001", "A001", "D"]
 "*/utils.py" = ["D104", "D100"]
