--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ sphinx-autodoc-typehints = "^2.5.0"
 sphinx-copybutton = "^0.5.2"
 sphinx-autoapi = "^3.3.3"
 ipykernel = "^6.29.5"
+tensorboardx = "^2.6.2.2"
 
 [tool.poetry.scripts]
 "autointent" = "autointent._pipeline._cli_endpoint:optimize"
