--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -24,7 +24,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-#          fetch-depth: 0
+          fetch-depth: 0
           fetch-tags: true
 
       - name: set up python 3.10
