--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -48,44 +48,15 @@ jobs:
           poetry install --with docs
 
       - name: Test documentation build
-        if: github.event_name == 'pull_request' && github.base_ref == 'dev'
+#        if: github.event_name == 'pull_request' && github.base_ref == 'dev'
         run: |
           echo "Testing documentation build for PR..."
-          poetry run sphinx-build docs/source docs/build/html
+          make test-docs
 
-      - name: Generate missing tags list
-#        if: github.event_name == 'push' || github.event_name == 'release'
-        id: missing_tags
+      - name: build multiversion documentation
+        # if: ${{ github.ref == 'refs/heads/dev' }}
         run: |
-          # Fetch existing documentation versions from gh-pages
-          mkdir -p existing_versions
-          git fetch origin gh-pages --depth=1
-          git checkout origin/gh-pages -- versions || true
-          
-          # List existing tags and built versions
-          EXISTING_VERSIONS=$(ls versions | tr '\n' ' ')
-          ALL_TAGS=$(git tag --list "v*" | tr '\n' ' ')
-          
-          # Find missing tags
-          MISSING_TAGS=""
-          for TAG in $ALL_TAGS; do
-            if [[ ! " $EXISTING_VERSIONS " =~ " $TAG " ]]; then
-              MISSING_TAGS+="$TAG "
-            fi
-          done
-          
-          echo "Missing tags: $MISSING_TAGS"
-          echo "missing_tags=${MISSING_TAGS}" >> $GITHUB_ENV
-
-      - name: Build documentation for missing tags
-        if: env.missing_tags != ''
-        run: |
-          for TAG in ${{ env.missing_tags }}; do
-            echo "Building docs for $TAG..."
-            git checkout $TAG
-            mkdir -p docs/build/versions/$TAG
-            poetry run sphinx-build docs/source docs/build/versions/$TAG
-          done
+          make multi-version-docs
 
       - name: Build documentation for dev branch
         # if: github.ref == 'refs/heads/dev'
@@ -101,36 +72,3 @@ jobs:
           publish_dir: docs/build/versions
           destination_dir: versions
           keep_files: true
-
-  update-static:
-    name: Update Static Files in Old Releases
-    runs-on: ubuntu-latest
-    needs: build-docs
-
-    steps:
-      - name: Checkout gh-pages branch
-        uses: actions/checkout@v4
-        with:
-          ref: gh-pages
-          fetch-depth: 0
-
-      - name: Update _static in all versions
-        run: |
-          # Define path to the updated _static directory
-          UPDATED_STATIC_DIR=versions/dev/_static
-          TARGET_STATIC_DIRS=$(find versions/ -type d -name "_static")
-          
-          # Copy updated _static to all versions
-          for DIR in $TARGET_STATIC_DIRS; do
-            echo "Updating $DIR..."
-            cp -r ${UPDATED_STATIC_DIR}/* ${DIR}/ || true
-          done
-
-      - name: Commit and push changes
-        run: |
-          git add .
-          git commit -m "Update _static files in all documentation versions" || echo "No changes to commit"
-          git push
-        # with:
-        #   github_token: ${{ github.token }}
-
