--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -69,6 +69,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ github.token }}
-          publish_dir: docs/build/versions
+          publish_dir: docs/build/html/versions
           destination_dir: versions
           keep_files: true
